assets/scss/_utilities.scss
//=======================================================
// Mixins
//=======================================================

// Clearfix
@mixin clearfix {
  &::after {
    content: '';
    display: table;
    clear: both;
  }
}

// Makes an element visually hidden, but accessible.
// @see http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
@mixin element-invisible {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
}

// Turns off the element-invisible effect.
@mixin element-invisible-off {
  position: static !important;
  clip: auto;
  height: auto;
  width: auto;
  overflow: auto;
}

// Makes an element visually hidden by default, but visible when focused.
@mixin element-focusable {
  @include element-invisible;

  &:active,
  &:focus {
    @include element-invisible-off;
  }
}

@mixin fas() {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  line-height: 1;
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
}


// Gold Bracket ///////////////

@mixin bracket() {
  position: relative;
  @include margin($top: $sm, $bottom: $sm);
  padding: $md;

  &:before,
  &:after {
    content: ' ';
    position: absolute;
    top: 0;
    width: $sm;
    height: 100%;
    border: 3px solid $primary;
  }

  &:before {
    left: -1em;
    border-right: 0;
  }

  &:after {
    right: -1em;
    border-left: 0;
  }
}

// Media Queries ///////////////

@mixin breakpoint($class) {
  @if $class==xs {
    @media (max-width: 767px) {
      @content;
    }
  }

  @if $class==xsm {
    @media (min-width: 600px) {
      @content;
    }
  }

  @else if $class==sm {
    @media (min-width: 768px) {
      @content;
    }
  }

  @else if $class==menu {
    @media (min-width: 855px) {
      @content;
    }
  }

  @else if $class==md {
    @media (min-width: 992px) {
      @content;
    }
  }

  @else if $class==lg {
    @media (min-width: 1200px) {
      @content;
    }
  }

  @else if $class==container {
    @media (min-width: 84.375em) {
      @content;
    }
  }

  @else if $class==xlg {
    @media (min-width: 106em) {
      @content;
    }
  }

  @else {
    @warn "Breakpoint mixin supports: xs, sm, md, lg";
  }
}

////// Flexbox

@mixin flexbox {
  display: flex;
}

//fg flex-grow fs flex-shrink fb flex-basis
@mixin flex($fg: 1, $fs: 0, $fb: auto) {
  flex: $fg $fs $fb;
}

@mixin flex-direction($value: row) {
  flex-direction: $value;
}

@mixin flex-wrap($value: nowrap) {
  flex-wrap: $value;
}

@mixin order($int: 0) {
  order: $int;
}

// vertical center mixin
@mixin center($position) {
  display: flex;

  @if $position=='both' {
    align-items: center;
    justify-content: center;
  }

  @else if $position=='vertical' {
    align-items: center;
  }

  @else if $position=='horizontal' {
    justify-content: center;
  }

  @else if $position=='none' {
    align-items: stretch;
    justify-content: flex-start;
  }
}


//////////  Padding/Margin

@mixin padding($top: null, $right: null, $bottom: null, $left: null) {
  padding-top: $top;
  padding-right: $right;
  padding-bottom: $bottom;
  padding-left: $left;
}

@mixin margin($top: null, $right: null, $bottom: null, $left: null) {
  margin-top: $top;
  margin-right: $right;
  margin-bottom: $bottom;
  margin-left: $left;
}


//////////  Responsive BG Image

@mixin responsive-bg {
  [data-responsive-background-image] {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center
  }

  [data-responsive-background-image] img {
    display: none;

    .no-js & {
      display: block;
    }
  }
}

// Headings

@mixin h1 {
  font-size: $h1-font-size;
  line-height: unset;
  @include margin($top: $sm, $bottom: $sm);
  font-family: $font-family-serif;
  font-weight: $font-weight-medium-bold;
}

@mixin h2 {
  font-size: $h2-font-size;
  line-height: unset;
  font-weight: $font-weight-medium;
  @include margin($top: 0, $bottom: $xsm);
  &:not(:first-child) {
    @include margin($top: $lg);
  }
}

@mixin h3 {
  font-size: $h3-font-size;
  line-height: unset;
  @include margin($top: 0, $bottom: $xsm);
  &:not(:first-child) {
    @include margin($top: $lg);
  }
}

@mixin h4 {
  font-size: $h4-font-size;
  line-height: unset;
  font-weight: $font-weight-medium;
  @include margin($top: 0, $bottom: $xsm);
  &:not(:first-child) {
    @include margin($top: $lg);
  }
}

@mixin h5 {
  font-size: $h5-font-size;
  line-height: unset;
  font-weight: $font-weight-medium;
  @include margin($top: 0, $bottom: $xsm);
  &:not(:first-child) {
    @include margin($top: $lg);
  }
}

@mixin h6 {
  font-size: $h6-font-size;
  line-height: unset;
  font-weight: $font-weight-medium;
  @include margin($top: 0, $bottom: $xsm);
  &:not(:first-child) {
    @include margin($top: $lg);
  }
}

// Card Mixins

@mixin card-enclosed {
  @include breakpoint(sm) {
    border: 1px solid rgba(0, 0, 0, 0.125);
  }

  .card__body {
    padding: 2rem;
  }

  .bttn {
    margin-bottom: 0;
  }
}


@mixin card-header {
  margin: 0 0 $md;
  padding: 0;
  font-size: 1.6rem;
  font-weight: $font-weight-bold;
  line-height: 1.2;

  a {
    text-decoration: none;
    color: $secondary;

    &:hover,
    &:focus {
      text-decoration: underline;
    }
  }
}


@mixin card-title {
  margin-bottom: .75rem;
}

@mixin card-body {
  flex: 1;
  color: $secondary;
  padding: 2rem;
  min-height: 1px;

  h2,
  h3,
  h4,
  h5,
  h6 {
    &:not(:first-child) {
      margin-top: 0;
    }
  }

  @include breakpoint(sm) {
    padding: 2rem 0 0;
  }

  .card--enclosed & {
    @include breakpoint(sm) {
      padding: 2rem;
    }
  }
}

@mixin card-subtitle {
  margin: 0 0 $gutter;
  color: #666;
  font-family: $font-family-serif;
  font-size: 1.3rem;
  font-weight: $font-weight-medium;
}

@mixin card {
  position: relative;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-bottom: 1.6rem;
  text-decoration: none;
  background: #fff;
  flex-grow: 1;
  @include flexbox;
  @include flex($fg: 1, $fs: 1, $fb: 0%);
  @include flex-direction($value: column);
  border: 1px solid rgba(0, 0, 0, 0.125);

  &:focus-within .card__title a:focus {
    text-decoration: underline;
  }

  @include breakpoint(sm) {
    border: none;
    margin-bottom: 0;
  }
}

@mixin card-paragraph {
  margin-bottom: 1.5rem;
  font-size: 1rem;
  line-height: 1.7;

  a {
    position: relative;
    z-index: 1;
  }
}

@mixin card-img-top {
  min-height: 1px;
}


@mixin card-media {
  flex-shrink: 0;
  width: 100%;
  min-height: 1px;

  img {
    flex-shrink: 0;
    @include card-img-top;
  }
}

@mixin card-media-horizontal-right {
  @include breakpoint(sm) {
    flex: 0 0 35%;
    max-width: 35%;
    margin-left: $gutter;
  }
}

@mixin card-media-horizontal-left {
  @include breakpoint(sm) {
    flex: 0 0 20%;
    width: 20%;
  }
}


// @todo SiteNow Mixins

// mixins

@mixin text-light {
  color: #EDECEB !important;
}

@mixin fullwidth-container {
  width: 100%;
  padding-right: 0;
  padding-left: 0;
  margin-right: auto;
  margin-left: auto;
}

@mixin bg-light {
  background-color: $light !important;
}

@mixin bg-dark {
  background-color: #343a40 !important;

  h2,
  h3,
  h4,
  h5,
  h6 {
    color: #fff;

    &.card__title {
      color: $secondary;
    }
  }
}

@mixin bg-yellow {
  background-color: #ffcd00 !important;
}

@mixin list-group-item-action {
  width: 100%;
  color: #495057;
  text-align: inherit;
}

@mixin list-group {
  display: flex;
  flex-direction: column;
  padding-left: 0;
  margin-bottom: 0;
}

@mixin list-group-item {
  position: relative;
  display: block;
  padding: 0 0 $gutter;
  margin-bottom: 0;
  background-color: #fff;
  border-bottom: 1px solid rgba(0, 0, 0, .125);

  &:first-child {
    border-top: 1px solid rgba(0, 0, 0, .125);
    padding-top: 0;
  }
}

@mixin list-group-flush {
  .list-group-item {
    border-right-width: 0;
    border-left-width: 0;
    border-radius: 0;
  }

  .list-group-item:first-child {
    border-top-width: 0
  }

  &:last-child .list-group-item:last-child {
    border-bottom-width: 0
  }
}

@mixin media-body {
  flex: 1;
}

@mixin card-columns {
  column-count: 3;
  column-gap: 1.25rem;
  orphans: 1;
  widows: 1;
}

// Extends ///////////////
%shadow {
  text-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
}


%no-ul-list {
  list-style-type: none;
  padding: 0;
  margin: 0;

  >li {
    display: inline-block;
    list-style-type: none;
    margin: 0;
  }
}

%container {
  margin: 0 $gutter;
  position: relative;

  @include breakpoint(container) {
    max-width: 81.875em;
    margin: 0 auto;
  }
}

// Font Smoothing ///////////////
%font-smoothing-on {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

%font-smoothing-off {
  -webkit-font-smoothing: auto;
  -moz-osx-font-smoothing: auto;
}

// Buttons

%bttn {
  border: none;
  display: inline-block;
  position: relative;
  cursor: pointer;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  //font-size: $base-font-size;
  //font-weight: $font-weight-bold;
  line-height: 1.4;
  font-size: 1.2rem;
  padding: 1rem 2rem .8rem;

  i,
  svg {
    margin-left: $sm;
    color: $primary;
  }
}

%bttn--focus {
  &:after {
    content: '';
    position: absolute;
    left: 50%;
    bottom: 0;
    width: 100%;
    height: 4px;
    background-color: $primary;
    transform-origin: center;
    transform: translate(-50%, 0) scaleX(0);
    transition: transform 0.3s ease-in-out;
  }

  &:focus {
    text-decoration: underline;
  }

  &:hover::after,
  &:focus::after {
    transform: translate(-50%, 0) scaleX(1);
  }
}

%bttn--primary {
  color: $secondary;
  background: $primary;

  i,
  svg,
  span {
    color: $white;
  }
}

%bttn--secondary {
  color: $white;
  background: $secondary;
}

%bttn--secondary__light {
  color: $white;
}

%bttn--tertiary {
  color: $secondary;
  background: white;
}

%bttn--transparent {
  background: transparent;
}

%bttn--full {
  display: block;
}

%bttn--outline {
  border: 1px solid $primary;

  i,
  span {
    color: $primary;
    //font-size: $h6-font-size;
    //@include padding($right: $sm);
  }

  svg {
    color: $primary;
    //@include padding($right: $sm);
  }
}

// utility classes

%uids-component--center {
  @include center(both);
  display: block;
  text-align: center;
}

%uids-component--flex-center {
  @include center(both);
  flex-flow: column nowrap;
  text-align: center;

  @include breakpoint(sm) {
    padding: 1.5rem 0;
  }
}

%uids-component--left {
  text-align: left;
  @include center(both);
}

%uids-component--flex-left {
  flex-flow: column nowrap;
  text-align: left;
  width: 100%;
  padding: 1.5rem 0;
}

%uids-component--gold {
  background: $primary;
}

%uids-component--black {
  background: $secondary;
}

%uids-component--gray {
  background: $light;
}

%uids-component--brain {
  background: #fff url("#{$imgpath}/brain-pattern.svg");
  background-size: auto auto;
}

%uids-component--brain-reversed {
  background: $primary url("#{$imgpath}/brain-pattern-reversed.svg");
  background-size: auto auto;
}

%uids-component--brain-black {
  background: $secondary url("#{$imgpath}/brain-pattern-black.svg");
  background-size: auto auto;
}

